--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,6 @@
 name = "calculator"
 version = "0.1.0"
 authors = ["GrSpirit <gr.spirit@gmail.com>"]
-edition = "2018"
+#edition = "2018"
 
 [dependencies]
